test/fail/basic_syntax/do_while_hide_vars.lly
#[
SyntaxError: v has not been declared.
Where: File "do_while_hide_vars.lly" at line 9
]#

do: {
    var v = 10
    continue
} while v == 10
